==History

[jerbil-0.99.03 23-Jul-2012]

  Release candidate for testing

[jerbil-0.99.02 12-June-2012]

  Fix mistaken call to get_key, now gone

[jerbil-0.99.01 08-June-2012]

  First pre-release of Jerbil 1.0.0, offering flexible server configuration and a single
  script for controlling services.
  
  * reconfigured options to use Jeckyl::Service and to add net address and mask details
  * renamed Jerbil::ServerRecord to Jerbil::Servers to reflect the role of the class

[jerbil-0.2.21 19-May-2012]

  Added Aurelius to the default files and rename jers to jerbil

[jerbil-0.2.20 28-Apr-2012]

  Annotate the client calls to try to understand the NoMethod errors raised

[jerbil-0.2.19 22-Mar-2012]

  Fix a bug where 1.9 was failing cos instance_methods returns symbols instead of
  strings.

jerbil-0.2.18 23-Dec-2011

Some refactoring and ensuring exception backtraces have newlines and not \n between
them!

jerbil-0.2.17 19-Dec-2011

Attempt to fix error when stopping services: cannot read symbol as string. Assume that
it is caused by :jerbil_config option. It Worked!

jerbil-0.2.16 19-Dec-2011

Restart logging after daemon is called

jerbil-0.2.15 19-Dec-2011

Change supervisor to catch StandardError and let SystemExit fall through untouched.
Add opts to log output from daemonize

jerbil-0.2.14 19-Dec-2011

improvements to supervisor class to add daemon log and catch errors more often

jerbil-0.2.12 27-Nov-2011

Attempt to fix bug where restarting service with old records on other servers 
removes new service's record on own server!

jerbil-0.2.11 25-Sep-2011

Set default config file to be module.rb rather than module.conf

jerbil-0.2.10 24-Sep-2011

thor actions: check that a link exists before testing it is equal

jerbil-0.2.9 24-Sep-2011

Add separate re-useable thor module for common install actions

jerbil-0.2.8 21-Sep-2011

Update jerbs install to ensure files are moved to the correct place

jerbil-0.2.7 21-Sep-2011

Add 'etc' to gemspec
