@@ -1,7 +1,0 @@
-= Jerbil
-
-Jumpin Ermin's Reliable Broker for Integrated Linux services
-
-== Description
-
-
