@@ -1,13 +1,13 @@
 # Created by Jevoom
 #
 # 23-Jul-2012
-#     Release candidate for testing
+#     fixed Jerbil::Config to inherit JerbilService::Config
 
 module Jerbil
-  # version set to 0.99.03
-  Version = '0.99.03'
+  # version set to 0.99.04
+  Version = '0.99.04'
   # date set to 23-Jul-2012
   Version_Date = '23-Jul-2012'
-  #ident string set to: jerbil-0.99.03 23-Jul-2012
-  Ident = 'jerbil-0.99.03 23-Jul-2012'
+  #ident string set to: jerbil-0.99.04 23-Jul-2012
+  Ident = 'jerbil-0.99.04 23-Jul-2012'
 end
